# backup_tool

./: .env.example  .gitignore  README.md  mybackup.service  mybackup.timer  pyproject.toml  requirements.txt  ubuntu_systemd_python_backup_setup.md
docs/: ubuntu_systemd_python_backup_setup.md
src/backup_tool/: __init__.py  auth.py  backup_config.json  config.py  gdrive.py  log.py  main.py  snapshot.py
src/backup_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/backup_tool/tests/: conftest.py  test_config.py  test_main.py  test_snapshot.py
